--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
 	"license": "MIT",
 	"dependencies": {
 		"@types/inquirer": "^8.1.3",
+		"@types/lodash": "^4.14.177",
 		"@types/mkdirp": "^1.0.2",
 		"@types/node": "^16.11.7",
 		"@types/node-localstorage": "^1.3.0",
-		"chalk": "^5.0.0",
+		"chalk": "^4.1.2",
 		"cross-fetch": "^3.1.4",
 		"inquirer": "^8.2.0",
+		"lodash": "^4.17.21",
 		"mkdirp": "^1.0.4",
 		"node-localstorage": "^2.2.1",
 		"playwright-chromium": "^1.17.1",
