--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@types/node-localstorage": "^1.3.0",
 		"chalk": "^4.1.2",
 		"cross-fetch": "^3.1.4",
+		"graphology": "^0.23.2",
 		"inquirer": "^8.2.0",
 		"lodash": "^4.17.21",
 		"mkdirp": "^1.0.4",
